--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
         android:id="@+id/cancelButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:background="@android:drawable/ic_delete"
+        android:background="@drawable/ic_baseline_clear_24"
         app:layout_constraintBottom_toTopOf="@id/contentEditText"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -66,7 +66,7 @@
         android:id="@+id/saveButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:background="@android:drawable/checkbox_on_background"
+        android:background="@drawable/ic_baseline_check_circle_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
