--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -10,55 +10,52 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/common_spacing">
 
-        <TextView
-            android:id="@+id/login"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/login"
-            app:layout_constraintBottom_toTopOf="@+id/edit_login"
-            app:layout_constraintStart_toStartOf="parent"
 
-            />
-
-        <EditText
-            android:id="@+id/edit_login"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/edit"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:inputType="text"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/login"></EditText>
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
+
+            <EditText
+                android:id="@+id/edit_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/login"
+                android:inputType="text" />
+            >
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/password"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/password"
-            app:layout_constraintBottom_toTopOf="@+id/edit_password"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_login"
-
-            />
-
-
-        <EditText
-            android:id="@+id/edit_password"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:inputType="text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/password"></EditText>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/edit">
+
+            <EditText
+                android:id="@+id/edit_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/password"
+                android:inputType="text" />
+            >
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/sign_in_button"
             android:layout_width="@dimen/posts_avatar_size"
             android:layout_height="@dimen/posts_avatar_size"
             android:layout_marginBottom="@dimen/common_spacing"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edit_password"
             app:icon="@drawable/ic_baseline_login_24"
-           ></com.google.android.material.button.MaterialButton>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/password">
+
+        </com.google.android.material.button.MaterialButton>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
